# sortphotos

./: .gitignore  migration.sh  my_command.md  pyproject.toml  sortphotos.spec
src/: common.py  exiftool.py  loggin.ini  progressbar.py  progressbar.py.bkp  sortphotos.py  sortphotos.py.bkp
src/Image-ExifTool-13.45/html/: index.html
